Fix footer not showing + rubber band scrolling behaviour on Apple devices

--- a/frontend/src/theme/global.css
+++ b/frontend/src/theme/global.css
@@ -28,6 +28,16 @@ html, body {
     width: 100%;
 }
 
+html {
+    overflow: hidden;
+    position: fixed;
+}
+
+body {
+    overflow: auto;
+    position: relative;
+}
+
 img {
     display: inline;
 }
@@ -322,7 +332,10 @@ img {
 
 .layout {
     width: 100%;
-    height: 100%;
+    height: 100dvh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
 }
 
@@ -341,8 +354,9 @@ img {
 }
 
 .layout .body {
+    flex: 1;
     width: 100%;
-    height: calc(100% - 110px);
+    height: calc(100dvh - 110px);
     display: flex;
     background-color: var(--color-bg);
 }
